[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/prototipos/personaje/Prototipo Final/lateral_izq.png" type="Texture" id=2]
[ext_resource path="res://real_deal/scripts/menu/Inventory.gd" type="Script" id=3]

[node name="Inventory" type="CanvasLayer"]
follow_viewport_enable = true
script = ExtResource( 3 )

[node name="Container" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -244.0
margin_top = -205.5
margin_right = 244.0
margin_bottom = 205.5
custom_constants/margin_right = 75
custom_constants/margin_top = 75
custom_constants/margin_left = 75
custom_constants/margin_bottom = 75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Container"]
margin_left = 75.0
margin_top = 75.0
margin_right = 413.0
margin_bottom = 336.0
size_flags_vertical = 5
tab_align = 0

[node name="PanelPJ" type="PanelContainer" parent="Container/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -21.9999
margin_top = -12.0
margin_right = -4.0
margin_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBox" type="HBoxContainer" parent="Container/TabContainer/PanelPJ"]
margin_left = 7.0
margin_top = 7.0
margin_right = 349.0
margin_bottom = 262.0
size_flags_stretch_ratio = 0.0
custom_constants/separation = 15

[node name="Equipo" type="MarginContainer" parent="Container/TabContainer/PanelPJ/HBox"]
margin_right = 188.0
margin_bottom = 254.0

[node name="Background" type="TextureRect" parent="Container/TabContainer/PanelPJ/HBox/Equipo"]
show_behind_parent = true
margin_top = 21.0
margin_right = 188.0
margin_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="Container/TabContainer/PanelPJ/HBox/Equipo"]
margin_right = 188.0
margin_bottom = 254.0

[node name="ItemsContainer" type="HBoxContainer" parent="Container/TabContainer/PanelPJ/HBox/Equipo/MarginContainer"]
margin_top = 127.0
margin_right = 188.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 6
alignment = 1

[node name="Items" type="GridContainer" parent="Container/TabContainer/PanelPJ/HBox/Equipo/MarginContainer/ItemsContainer"]
margin_left = 94.0
margin_right = 94.0
custom_constants/vseparation = 150
custom_constants/hseparation = 90
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="Container/TabContainer/PanelPJ/HBox"]
margin_left = 203.0
margin_right = 207.0
margin_bottom = 254.0

[node name="Stats" type="MarginContainer" parent="Container/TabContainer/PanelPJ/HBox"]
margin_left = 222.0
margin_right = 316.0
margin_bottom = 254.0
grow_horizontal = 2

[node name="VBox" type="VBoxContainer" parent="Container/TabContainer/PanelPJ/HBox/Stats"]
margin_right = 94.0
margin_bottom = 254.0
grow_horizontal = 0
size_flags_horizontal = 5
size_flags_vertical = 5
alignment = 1

[node name="ItemsCenter" type="MarginContainer" parent="Container/TabContainer/PanelPJ/HBox/Stats/VBox"]
margin_top = 118.0
margin_right = 94.0
margin_bottom = 118.0

[node name="Grid" type="GridContainer" parent="Container/TabContainer/PanelPJ/HBox/Stats/VBox/ItemsCenter"]
margin_right = 94.0
custom_constants/vseparation = 0
custom_constants/hseparation = 20
columns = 6

[node name="Stats" type="CenterContainer" parent="Container/TabContainer/PanelPJ/HBox/Stats/VBox"]
margin_top = 122.0
margin_right = 94.0
margin_bottom = 136.0

[node name="Text" type="Label" parent="Container/TabContainer/PanelPJ/HBox/Stats/VBox/Stats"]
margin_right = 94.0
margin_bottom = 14.0
text = "AsdASDasdasd"
align = 1

[node name="Mazo" type="PanelContainer" parent="Container/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 24.0
margin_right = -4.0
margin_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="Container/TabContainer/Mazo"]
margin_left = 7.0
margin_top = 7.0
margin_right = 819.0
margin_bottom = 445.0
custom_constants/separation = 10

[node name="HBoxCartas" type="HBoxContainer" parent="Container/TabContainer/Mazo/VBox"]
margin_right = 812.0
margin_bottom = 400.0
rect_min_size = Vector2( 800, 400 )
size_flags_stretch_ratio = 0.0
custom_constants/separation = 15
alignment = 1

[node name="Coleccion" type="MarginContainer" parent="Container/TabContainer/Mazo/VBox/HBoxCartas"]
margin_right = 519.0
margin_bottom = 400.0
grow_horizontal = 0
rect_min_size = Vector2( 519, 0 )

[node name="ScrollContainer" type="ScrollContainer" parent="Container/TabContainer/Mazo/VBox/HBoxCartas/Coleccion"]
margin_right = 519.0
margin_bottom = 400.0
scroll_horizontal_enabled = false

[node name="CenterGrid" type="CenterContainer" parent="Container/TabContainer/Mazo/VBox/HBoxCartas/Coleccion/ScrollContainer"]
margin_right = 519.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Grid" type="GridContainer" parent="Container/TabContainer/Mazo/VBox/HBoxCartas/Coleccion/ScrollContainer/CenterGrid"]
margin_left = 259.0
margin_top = 200.0
margin_right = 259.0
margin_bottom = 200.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 4

[node name="VSeparator" type="VSeparator" parent="Container/TabContainer/Mazo/VBox/HBoxCartas"]
margin_left = 534.0
margin_right = 538.0
margin_bottom = 400.0

[node name="Cartas" type="MarginContainer" parent="Container/TabContainer/Mazo/VBox/HBoxCartas"]
margin_left = 553.0
margin_right = 812.0
margin_bottom = 400.0
grow_horizontal = 0
rect_min_size = Vector2( 259, 0 )
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Container/TabContainer/Mazo/VBox/HBoxCartas/Cartas"]
margin_right = 259.0
margin_bottom = 400.0
grow_horizontal = 0

[node name="Grid" type="GridContainer" parent="Container/TabContainer/Mazo/VBox/HBoxCartas/Cartas/ScrollContainer"]
mouse_filter = 2

[node name="HBoxBotones" type="HBoxContainer" parent="Container/TabContainer/Mazo/VBox"]
margin_top = 410.0
margin_right = 812.0
margin_bottom = 430.0
custom_constants/separation = 50
alignment = 1

[node name="Guardar" type="Button" parent="Container/TabContainer/Mazo/VBox/HBoxBotones"]
margin_left = 375.0
margin_right = 436.0
margin_bottom = 20.0
text = "Aceptar"

[node name="Cerrar" type="Button" parent="Container/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 542.5
margin_top = 234.5
margin_right = 534.5
margin_bottom = 198.5
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Container/TabContainer/Mazo/VBox/HBoxBotones/Guardar" to="." method="_on_Aceptar_pressed"]
[connection signal="pressed" from="Container/TabContainer/Cerrar" to="." method="_on_Cerrar_pressed"]
